WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212785
REGRESSION: (
r262398
) Text manipulation crashes when content is added
https://bugs.webkit.org/show_bug.cgi?id=212785
Summary
REGRESSION: (r262398) Text manipulation crashes when content is added
Sihui Liu
Reported
2020-06-04 15:06:05 PDT
...
Attachments
Patch
(5.44 KB, patch)
2020-06-04 15:15 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-06-04 15:15:48 PDT
Created
attachment 401080
[details]
Patch
Sihui Liu
Comment 2
2020-06-04 15:45:37 PDT
<
rdar://problem/63981472
>
Sihui Liu
Comment 3
2020-06-04 15:46:19 PDT
Thanks for the review! Will commit after bots are green.
EWS
Comment 4
2020-06-04 16:58:37 PDT
Committed
r262587
: <
https://trac.webkit.org/changeset/262587
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401080
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug