Source/WebCore: REGRESSION:(r262398) Text manipulation crashes when content is added https://bugs.webkit.org/show_bug.cgi?id=212785

Reviewed by Ryosuke Niwa.

r262398 accidentally removed the bound check on array index and was not caught by existing tests.

Test: TextManipulation.CompleteTextManipulationFailWhenContentIsAdded

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::replace):

Tools:
REGRESSION: (r262398) Text manipulation crashes when content is added
https://bugs.webkit.org/show_bug.cgi?id=212785

Reviewed by Ryosuke Niwa.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/225593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262587 268f45cc-cd09-0410-ab3c-d52691b4dbfc